[package]
name = "mus"
version = "0.0.0"
authors = ["Moses Miller <Majora320@gmail.com>"]
edition = "2018"

[dependencies]
pretty_env_logger = "0.4"
directories = "3.0"
thiserror = "1.0"
rusqlite = "0.24"
walkdir = "2.3"
taglib = "1.0"
rodio = "0.13"
log = "0.4"
druid = { git = "https://github.com/linebender/druid.git" }
